<resources>
    <string name="app_name">Lista de tarefas Room</string>
    <string name="tv_title">Brincar com as crianças</string>
    <string name="tv_date">01/01/2021</string>
    <string name="tv_hour">18:00</string>
    <string name="tv_message">Ops! Você não possui\nnenhuma tarefa.</string>
    <string name="tv_title_main">Lista de Tarefas</string>
    <string name="fab_description">Adicionar tarefa</string>
    <string name="toolbar">Criar Tarefa</string>
    <string name="til_title_add">Titulo</string>
    <string name="til_description_add">Descrição</string>
    <string name="til_date_add">01/01/2021</string>
    <string name="til_hour_add">00:00</string>
    <string name="mb_create_add">OK</string>
    <string name="mb_cancel_add">Cancelar</string>
</resources>