<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="16dp"
    android:layout_width="match_parent"
    app:layout_constraintCircleRadius="8dp"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toStartOf="@id/iv_delete"
        android:background="@color/background"
        android:layout_marginEnd="36dp"
        android:id="@+id/cl_item">

    <TextView
        android:id="@+id/tv_title"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/tv_title"
        android:textSize="18sp"
        android:layout_marginStart="16dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_date"
        app:layout_constraintStart_toStartOf="@id/tv_title"
        tools:text="@string/tv_date"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        android:layout_width="100dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_hour"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textAlignment="textEnd"
        app:layout_constraintStart_toEndOf="@+id/tv_date"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        tools:text="@string/tv_hour" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_delete"
        app:srcCompat="@drawable/ic_delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="40dp"
        android:layout_height="36dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>